<resources>
    <string name="app_name">Food Helper</string>
    <string name="title_activity_maps">Map</string>
    <string name="help_message">In these unprecedented times we need all the help we can get.         We’re all in this together! In an effort to help we’ve made an app to help you always have         food to eat. In order to use the app to the fullest we’ve also included a guide to get around         the app!</string>
    <string name="go_to_main_activity">Return</string>
    <string name="how_to_use">At the start the app shows you both free food resources and discounted food resources. \nIf you click on the gear icon then you will have the option to login, logout, sign in, or click the help button, as you\'ve done. \nClicking on one of the food resource items will take you to a screen with more details pertaining to the item.</string>
    <string name="sign_out_message">That\'s All Folks!</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign up</string>
    <string name="reset_password_button">Reset Password</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="enter_credentials">Please enter your information</string>
    <string name="porky_pig_logo">Porky pig logo</string>
    <string name="porky_pig">Porky Pig waving goodbye</string>
    <string name="summary">Settings choice</string>
    <string name="settings">Settings</string>

    <string name="setting_login">For returning users</string>
    <string name="setting_logout">For exiting users</string>
    <string name="setting_sign_up">For new and eager users</string>
    <string name="setting_help">For users who need just a little more help</string>



</resources>
